--- a/ETL_Deliverable1_Challenge_FINAL.ipynb
+++ b/ETL_Deliverable1_Challenge_FINAL.ipynb
@@ -22,19 +22,21 @@
     "# 1. Create a function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def function_name():\n",
+    "def extract_transform_load():\n",
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    \n",
+    "    kaggle_metadata = pd.read_csv(kaggle_file)\n",
+    "    ratings = pd.read_csv(ratings_file)\n",
     "\n",
     "    # 3. Open the read the Wikipedia data JSON file.\n",
-    "    \n",
+    "    with open(wiki_file, mode='r') as file:\n",
+    "        wiki_movies_raw = json.load(file)\n",
     "    # 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
-    "    \n",
+    "    wiki_movies_df = pd.DataFrame(wiki_movies_raw)\n",
     "    # 5. Return the three DataFrames\n",
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
     "\n",
     "# 6 Create the path to your file directory and variables for the three files. \n",
-    "file_dir = \n",
+    "file_dir = \".\"\n",
     "# Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia.movies.json'\n",
     "# Kaggle metadata\n",
